welcome.lessons.welcome.array.array667.Array667.scala.error
array667:11: error: value and is not a member of Int
  return l and n
           ^array667:5: error: type mismatch;
 found   : Unit
 required: Int
  for (i<- 0 to nums.length-1){
        ^